完善本地缓存服务;新增系统全局配置功能;新增一些工具类

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
     user:
       name: root
       password: 123456
+  cache:
+    ehcache:
+      #指定ehcache本地缓存的配置文件路径
+      config: classpath:ehcache.xml
 
 
 # mybatis-plus相关配置
