--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version>
+		</dependency>
 		<!--日志-->
 		<dependency>
 			<groupId>org.slf4j</groupId>
