SpringBoot版本升级为2.1.13;新增Swagger2接口文档功能

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,14 @@
 #开发环境的配置文件
 server:
   port: 8888   # web应用服务端口
-
+  tomcat:
+    max-swallow-size: -1
+  servlet:
+    context-path: /yiyuan
+  compression:
+    enabled: true
+    min-response-size: 1024
+    mime-types: application/javascript,application/json,application/xml,text/html,text/xml,text/plain,text/css,image/*
 
 spring:
   # 配置数据源
