--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
 	<properties>
 		<!--JDK版本-->
 		<java.version>1.8</java.version>
+		<!--JWT-->
+		<jjwt.version>0.10.6</jjwt.version>
+		<!--spring2.0集成redis所需common-pool2-->
+		<commons-pool2.version>2.5.0</commons-pool2.version>
+		<!--工具包-->
+		<hutool.version>5.0.6</hutool.version>
 	</properties>
 
 	<!--SpringBoot 提供常用jar包版本-->
@@ -109,6 +115,27 @@
 			<artifactId>guava</artifactId>
 			<version>21.0</version>
 		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>${hutool.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.whvcse</groupId>
+			<artifactId>easy-captcha</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<!-- redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<!--spring2.0集成redis所需common-pool2-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>${commons-pool2.version}</version>
+		</dependency>
 		<!--日志-->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -140,11 +167,21 @@
 			<artifactId>ehcache-core</artifactId>
 			<version>2.6.11</version>
 		</dependency>
-		<!--JWT  Json Web Token，JSON风格的轻量级的授权和身份认证规范-->
+		<!--JWT-->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>0.9.1</version>
+			<artifactId>jjwt-api</artifactId>
+			<version>${jjwt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>${jjwt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>${jjwt.version}</version>
 		</dependency>
 		<!-- Swagger API文档 -->
 		<dependency>
@@ -177,6 +214,29 @@
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-models</artifactId>
 			<version>1.5.22</version>
+		</dependency>
+		<!--IP地址库-->
+		<dependency>
+			<groupId>org.lionsoul</groupId>
+			<artifactId>ip2region</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+		<!--poi-->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.17</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
+		<!--获取浏览器信息-->
+		<dependency>
+			<groupId>eu.bitwalker</groupId>
+			<artifactId>UserAgentUtils</artifactId>
+			<version>1.20</version>
 		</dependency>
 
 	</dependencies>
