完善代码注释

--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
 			<artifactId>hutool-all</artifactId>
 			<version>${hutool.version}</version>
 		</dependency>
+		<!--Java图形验证码  https://gitee.com/whvse/EasyCaptcha-->
 		<dependency>
 			<groupId>com.github.whvcse</groupId>
 			<artifactId>easy-captcha</artifactId>
