--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,6 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.3.RELEASE</version>
 		<relativePath/>
-
-
 	</parent>
 
 	<!--依赖-->
@@ -151,10 +149,23 @@
 			<artifactId>logback-core</artifactId>
 			<version>1.0.11</version>
 		</dependency>
+		<!--<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.11</version>
+			<scope>test</scope>
+		</dependency>-->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.11</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+			<scope>provided</scope>
 		</dependency>
 		<!-- cache 本地缓存 -->
 		<dependency>
@@ -253,5 +264,23 @@
 			</plugin>
 		</plugins>
 	</build>
+	<!--<build>
+		&lt;!&ndash;打包过程中跳过测试&ndash;&gt;
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					&lt;!&ndash;true跳过测试&ndash;&gt;
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+			&lt;!&ndash;spring boot 打包规则 &ndash;&gt;
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>-->
 
 </project>
