--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,9 +14,11 @@ spring:
   # 配置数据源
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/agiledevyydb?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: root
+    url: jdbc:mysql://123.56.235.60:3306/agiledevyydb?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: zyf
+    password: 123456
+#    username: root
+#    password: root
     type: com.alibaba.druid.pool.DruidDataSource
     #连接池配置
     druid:
