--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,6 @@ distributed-yy:
   #数据中心编号(1-31)
   idc-code: 1
 
-
 #登录图形验证码有效时间/分钟
 loginCode:
   expiration: 2
@@ -30,7 +29,7 @@ jwt:
 
 #是否开启 swagger-ui
 swagger:
-  enabled: true
+  enabled: flase
 
 spring:
   #不同环境配置文件设置
@@ -45,9 +44,10 @@ spring:
   redis:
     #数据库索引
     database: 0
-    host: 127.0.0.1
+    host: 123.56.235.60
     port: 6379
-    password:
+    password: zhouyifan
+#    password:
     #连接超时时间
     timeout: 5000
 
